--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "client", 
         "browser"
     ], 
-    "author": "alefen", 
+    "author": "alexanderhoehling", 
     "contributors": [], 
     "dependencies": {
         "jsdom": "9.12.0", 
@@ -24,6 +24,8 @@
         "grunt-phpunit" : "~0.3.6",
         "grunt-file-creator" : "~0.1.3",
         "grunt-rename-util" : "~1.0.0",
-        "grunt-contrib-copy" : "~1.0.0"
+        "grunt-contrib-copy" : "~1.0.0",
+        "slim/slim": "^3.0",
+        "doctrine/orm": "*"
     }
 }
