--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "alfenory_auth_api", 
-    "version": "1.0.1", 
+    "version": "1.0.2", 
     "license" :"gpl", 
     "description" : "alfenory plattform authorisation api", 
     "keywords": [
@@ -15,7 +15,12 @@
     "dependencies": {
         "jsdom": "9.12.0", 
         "unit.js": "2.0.0"
-    }, 
+    },
+    "require": {
+        "php": ">=5.5",
+        "slim/slim": "^3.0",
+        "doctrine/orm": "*"
+    },
     "devDependencies": {
         "grunt": "~1.0.1", 
         "grunt-contrib-clean": "~1.1.0", 
@@ -24,8 +29,6 @@
         "grunt-phpunit" : "~0.3.6",
         "grunt-file-creator" : "~0.1.3",
         "grunt-rename-util" : "~1.0.0",
-        "grunt-contrib-copy" : "~1.0.0",
-        "slim/slim": "^3.0",
-        "doctrine/orm": "*"
+        "grunt-contrib-copy" : "~1.0.0"
     }
 }
