--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "alfenory_auth_api",
-    "version": "1.0.17",
+    "version": "1.0.18",
     "license": "gpl",
     "description": "alfenory plattform authorisation api",
     "keywords": [
@@ -32,6 +32,7 @@
         "grunt-file-creator": "~0.1.3",
         "grunt-phpunit": "~0.3.6",
         "grunt-rename-util": "~1.0.0",
-        "gulp": "^3.9.1"
+        "gulp": "^3.9.1",
+        "gulp-composer": "^0.4.5"
     }
 }
