--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     ],
     "require": {
         "slim/slim": "^3.0",
-        "doctrine/orm": "*"
+        "doctrine/orm": "*",
+        "phpmailer/phpmailer": "~6.0"
     },
     "minimum-stability": "dev",
     "autoload": {
